@@ -319,7 +319,7 @@ typedef struct _hashSelectorEntry
 {
 	CCLOG(@"cocos2d: deallocing %@", self);
 
-	[self unscheduleAllSelectors];
+	[self unscheduleAll];
 
 	[super dealloc];
 }
@@ -658,18 +658,18 @@ typedef struct _hashSelectorEntry
 
 #pragma mark CCScheduler - Common for Update selector & Custom Selectors
 
--(void) unscheduleAllSelectors
+-(void) unscheduleAll
 {
-    [self unscheduleAllSelectorsWithMinPriority:kCCPrioritySystem];
+    [self unscheduleAllWithMinPriority:kCCPrioritySystem];
 }
 
--(void) unscheduleAllSelectorsWithMinPriority:(NSInteger)minPriority
+-(void) unscheduleAllWithMinPriority:(NSInteger)minPriority
 {
 	// Custom Selectors
 	for(tHashTimerEntry *element=hashForTimers; element != NULL; ) {
 		id target = element->target;
 		element=element->hh.next;
-		[self unscheduleAllSelectorsForTarget:target];
+		[self unscheduleAllForTarget:target];
 	}
 
 	// Updates selectors
@@ -694,7 +694,7 @@ typedef struct _hashSelectorEntry
 
 }
 
--(void) unscheduleAllSelectorsForTarget:(id)target
+-(void) unscheduleAllForTarget:(id)target
 {
 	// explicit nil handling
 	if( target == nil )
