@@ -7,6 +7,7 @@ version 2.1-beta3  xx-Oct-2012
 		Added: removeFromParent. Calls removeFromParentAndCleanup: with cleanup=YES
 		Added: removeAllChildren. Calls removeAllChildrenWithCleanup: with cleanup=YES
 . [NEW] RenderTexture: Supports "auto rendering" its children to the texture. No need to call being/end
+. [NEW] Scheduler: It is possible to schedule blocks too.
 . [FIX] Actions: TargetedAction can be copied. Calls super correctly
 		Blink: "stop" restores original "visibility" state
 . [FIX] Director: Fixed possible retain cycle with the delegate
@@ -25,6 +26,10 @@ version 2.1-beta3  xx-Oct-2012
 		New way to enable "targeted" touches: [self setTouchMode:kCCTouchOneByOne];
 . [FIX] LayerColor: uses correct default blending function (issues #1422 #1423)
 . [FIX] Particle: Honors the directory of the .plist file when loading the .png file
+. [FIX] Scheduler: API improvements:
+		unscheduleAllSelectors -> unscheduleAll (since it also unschedules blocks)
+		unscheduleAllSelectorsForTarget -> unscheduleAllForTarget (since it also unschedules blocks)
+		Old methods can be called, but are deprecated.
 . [FIX] Templates: Autoration can be overriden in runtime on iOS 6
 		Fixed some grammar errors
 . [FIX] Tests: Watermelon With Me uses new Chipmunk API
